--- a/docs/distribution.Rmd
+++ b/docs/distribution.Rmd
@@ -21,7 +21,7 @@ zooplankton <- read(file = "zooplankton", package = "data.io", lang = "fr")
 names(zooplankton)
 ```
 
-> Réalisez quatres histogrammes pour visualiser la distribution du diamètre du cercle équivalent (`edc`) en utilisant les découpages suivants : 10, 15, 40 et 55. 
+> Réalisez quatres histogrammes pour visualiser la distribution du diamètre du cercle équivalent (`ecd`) en utilisant les découpages suivants : 10, 25, 40 et 55. 
 
 ```{r histo1a}
 
